# petitc

./: .gitignore  Makefile  README.md  dune-project  petitc.opam
lib/: ast.ml  codegen.ml  dune  lexer.mll  main.ml  parser.mly  typeck.ml  typed.ml  utils.ml
test/: codegen_nested.c  codegen_nested.s  codegen_simple.c  codegen_simple.s  comments.c  comments.lex.txt  dune  expression_types.c  expression_types.type.txt  lex_comments.lex.txt  lex_tokens.lex.txt  parse_complex.parse.txt  parsing.c  parsing.parse.txt  petitc.ml  tokens.c  tokens.lex.txt  type_expressions.c  type_expressions.type.txt  type_instructions.c  type_instructions.type.dot  type_instructions.type.txt  type_no_function.c  type_wrong_argument_type.c
